--- a/4_CSS/실습2/index.html
+++ b/4_CSS/실습2/index.html
@@ -28,9 +28,11 @@
             height: 500px;
             float: left;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             vertical-align: middle;
             
+
         }
         #content{
             width: calc(100% - 79px);
@@ -46,11 +48,12 @@
 
     <div class="wrap">
         <div id="aside">
+            <a href="\images\icons\hamburger-menu.svg"></a>
             <img src="\images\icons\hamburger-menu.svg" alt="hamburgerButton" width="30px" height="30px"> 
             <img src="\images\icons\home.svg" alt="home" width="30px" height="30px">홈
-            <img src="\images\icons\originals.svg" alt="shorts">Shorts
-            <img src="\images\icons\subscriptions.svg" alt="subscriptions">구독
-            <img src="\images\icons\library.svg" alt="library">나
+            <img src="\images\icons\originals.svg" alt="shorts" width="30px" height="30px">Shorts
+            <img src="\images\icons\subscriptions.svg" alt="subscriptions" width="30px" height="30px">구독
+            <img src="\images\icons\library.svg" alt="library" width="30px" height="30px">나
         </div>
 
         <div id="content">
