--- a/4_CSS/화면구조잡기/02_1웹문서구조.html
+++ b/4_CSS/화면구조잡기/02_1웹문서구조.html
@@ -50,12 +50,12 @@
 </head>
 <body>
     <div class="wrap">
-        <div id="header"></div>
+        <div id="header">1</div>
         <div id="content">
-            <div id="content1"></div>
-            <div id="content2"></div>
+            <div id="content1">2</div>
+            <div id="content2">3</div>
         </div>
-        <div id="footer"></div>
+        <div id="footer">4</div>
     </div>
 </body>
 </html>
