--- a/999_SEMI_Project/test.html
+++ b/999_SEMI_Project/test.html
@@ -3,80 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mainPage_tagSelect</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="icon" href="logo.png"/>
+    <link rel="apple-touch-icon" href="logo.png"/>
+    <style>
+        body{
+            font-family: "Noto Sans KR", system-ui;
+            margin: 0px;
+            padding: 0px;
+        }
+        #mainPage_tagSelect_table{
+            text-align: center;
+            color: rgba(119, 128, 136, 120);
+            font-weight: bold;
+        }
+        .selected_tag{
+            font-family: "Noto Sans KR", system-ui;
+            color: white;
+            border: 1px solid rgba(123, 188, 176, 146);
+            border-radius: 25px;
+            background-color: rgba(123, 188, 176, 146);
+            width: 130px;
+            height: 45px;
+            font-weight: 500;
+        }
+        .unselected_tag{
+            font-family: "Noto Sans KR", system-ui;
+            color: rgba(73, 85, 96, 80);
+            border: 1px solid rgba(123, 188, 176, 146);
+            border-radius: 25px;
+            background-color: white;
+            width: 130px;
+            height: 45px;
+            font-weight: 500;
+        }
+        #mainPage_tagSelect_table .mainPage_tag{
+            padding: 20px 3px 20px 3px;
+        }
+        #mainPage_tagSelect_table_title{
+            font-size: 35px;
+            font-weight: 700;
+            color: black;
+            padding: 15px;
+        }
+        #mainPage_tagSubmit{
+            font-family: "Noto Sans KR", system-ui;
+            color: white;
+            border: 1px solid rgba(123, 188, 176, 146);
+            border-radius: 25px;
+            background-color: rgba(123, 188, 176, 146);
+            width: 130px;
+            height: 45px;
+            font-weight: 500;
+      }
+        /* #mainPage_tagSelect_table button:hover{
+            color: white;
+            background-color: rgba(123, 188, 176, 146);
+        } */
+    </style>
 </head>
 <body>
-    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"
-    integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" crossorigin="anonymous"></script>
-  <script>
-    Kakao.init('99929078a9d810f506f314a69d82b1f2'); // 사용하려는 앱의 JavaScript 키 입력
-  </script>
-  
-  <a id="kakao-login-btn" href="javascript:loginWithKakao()">
-    <img src="https://k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg" width="222"
-      alt="카카오 로그인 버튼" />
-  </a>
-  <p id="token-result"></p>
-  
-  <script>
-    function loginWithKakao() {
-      Kakao.Auth.authorize({
-        redirectUri: 'http://localhost:5500/workspace/project/kakaologin/kakaologin.html',
-      });
-    }
-  
-    // 아래는 데모를 위한 UI 코드입니다.
-    displayToken()
-    function displayToken() {
-      var token = getCookie('authorize-access-token');
-  
-      if(token) {
-        Kakao.Auth.setAccessToken(token);
-        Kakao.Auth.getStatusInfo()
-          .then(function(res) {
-            if (res.status === 'connected') {
-              document.getElementById('token-result').innerText
-                = 'login success, token: ' + Kakao.Auth.getAccessToken();
+    <table id="mainPage_tagSelect_table" align="center">
+        <tr>
+            <td id="mainPage_tagSelect_table_title" colspan="8">나만의 맞춤 여행!</td>
+        </tr>
+        <tr>
+            <td colspan="8">태그로 쉽게 찾아보세요!</td>
+        </tr>
+        <tr>
+            <td colspan="8">관심 있는 여행 스타일을 선택하면 당신에게 딱 맞는 여행지를 추천해드립니다. 지금 떠날 준비 되셨나요?</td>
+        </tr>
+        <tr>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="가족여행">#가족여행</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="친구들과">#친구들과</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="1인여행">#1인여행</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="커플여행">#커플여행</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="반려동물">#반려동물</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="동호회/친목모임">#동호회/친목모임</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="워크숍">#워크숍</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="아이들과">#아이들과</button></td>
+        </tr>
+        <tr>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="놀이동산">#놀이동산</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="빠지">#빠지</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="패러글라이딩">#패러글라이딩</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="번지점프">#번지점프</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="워터파크">#워터파크</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="스키장">#스키장</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="루지">#루지</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="클라이밍">#클라이밍</button></td>
+        </tr>
+        <tr>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="맛집">#맛집</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="전통시장">#전통시장</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="카페">#카페</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="힐링">#힐링</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="글램핑">#글램핑</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="자연">#자연</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="역사">#역사</button></td>
+            <td class="mainPage_tag"><button class="unselected_tag" onclick="mainPage_tagSelect(this)" value="문화">#문화</button></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td><button id="mainPage_tagSubmit">검색하기</button></td>
+        </tr>
+        <script>
+            //누른 버튼의 클래스를 가져와서 클래스가 unselect이면 select로 변경
+            function mainPage_tagSelect(button){
+              button.className = button.className === 'unselected_tag' ? 'selected_tag' : 'unselected_tag';
             }
-          })
-          .catch(function(err) {
-            Kakao.Auth.setAccessToken(null);
-          });
-      }
-    }
-  
-    function getCookie(name) {
-      var parts = document.cookie.split(name + '=');
-      if (parts.length === 2) { return parts[1].split(';')[0]; }
-    }
-  </script>
-  
-  <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"
-  integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" crossorigin="anonymous"></script>
-<script>
-  Kakao.init('99929078a9d810f506f314a69d82b1f2'); // 사용하려는 앱의 JavaScript 키 입력
-</script>
-
-<button class="api-btn" onclick="kakaoLogout()">로그아웃</button>
-
-<script>
-  function kakaoLogout() {
-    Kakao.Auth.logout()
-      .then(function() {
-        alert('logout ok\naccess token -> ' + Kakao.Auth.getAccessToken());
-        deleteCookie();
-      })
-      .catch(function() {
-        alert('Not logged in');
-      });
-  }
-
-  // 아래는 데모를 위한 UI 코드입니다.
-  function deleteCookie() {
-    document.cookie = 'authorize-access-token=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
-  }
-</script>
-
-
+        </script>
+    </table>
 </body>
 </html>
