--- a/workedream/communityList.html
+++ b/workedream/communityList.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <div class="list-container"> 
+
     <!-- 상단 제목 -->
     <section class="title">
         <h1>인기글 </h1>
@@ -129,6 +131,6 @@
         <span id="pageNumber">1</span>
         <button id="nextPage">&#9654;</button>
     </div>
-
+</div>
 </body>
 </html>
