--- a/workedream/communityHome.html
+++ b/workedream/communityHome.html
@@ -8,6 +8,7 @@
    
 </head>
 <body>
+    <div class="home-container"> 
     <section class="title">
         <h1>커뮤니티 홈</h1>
     </section>
@@ -149,7 +150,7 @@
         </div>
         
     </section>
-
+</div>
     
 </body>
 </html>
